[tool.poetry]
name = "meetup-viz"
version = "0.1.0"
description = ""
authors = ["bitkarrot <73979971+bitkarrot@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
plotly = "^5.14.1"
dash = "^2.9.3"
dash-bootstrap-components = "^1.4.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
